--- a/index.html
+++ b/index.html
@@ -3,25 +3,112 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=2.0">
-    <title>PWeb H</title>
+    <title>Tugas 1 Pweb H</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1 title="I'm teh first heading">This is heading 1</h1>
-<h2>This is heading 2</h2>
-<h3>This is heading 3</h3>
-<p title="I'm the first paragraph hehe">My first paragraph.</p>
-<p style="color:blue;">This is a red paragraph.</p>
-<a href="https://www.w3schools.com">Tekan ini Cok</a>
+<h1 align="center" title="I'm the first heading">TUGAS WEB PERTAMA</h1>
+<h2>Rafhi Sadipta</h2>
+<h3>5025221014</h3>
+<h4>Pweb H</h4>
+<h5>Dosen Pengampu : Ridho Rahman</h5>
+<h6>Hari Selasa, 5 September 2023</h6>
+<p>about me</p>
+<a href="https://www.instagram.com/rafhi_sadipta">
+    <img src="IG.png" alt="My Instagram" style="width:42px;height:42px;">
+</a>
+<a href="https://www.github.com/RafhiSadipta">
+        <img src="pngegg (1).png" alt="My Github" style="width:42px;height:42px;">
+</a>
+<p>Pengaplikasian seluruh tag kedalam web sini.</p>
 <!-- <img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142"> -->
 <div>
-<a href="default.asp">
-    <img src="pngwing.com (1).png" alt="HTML tutorial" style="width:42px;height:42px;">
-</a>
+    <img src="ITS.png" alt="Logo ITS" style="width:420px;height:420px;">
 </div>
 <div>
-<p>mUEHEHEHHEHEHHEEHEH</p>
 <button onclick="document.location='default.asp'">HTML Tutorial</button>
+<p>Data Mahasiswa di kelas Pweb H</p>
+</div>
+<div>
+    <form>
+        <label for="fname">Nama Lengkap:</label><br>
+        <input type="text" id="fname" name="fname"><br>
+        <label for="nrp">NRP:</label><br>
+        <input type="text" id="nrp" name="nrp"><br>
+        <label for="asal">Asal:</label><br>
+        <input type="text" id="asal" name="asal"><br>
+      </form>
+    <p>Jenis Kelamin</p>
+    <form>
+        <input type="radio" id="laki" name="jenis kelamin" value="LAKI">
+        <label for="laki">Laki-laki</label><br>
+        <input type="radio" id="cewek" name="jenis kelamin" value="CEWEK">
+        <label for="cewek">Perempuan</label><br><br>
+        <input type="submit">
+    </form>
+</div>
+<div>
+    <table>
+        <tr>
+          <th>Nama</th>
+          <th>NRP</th>
+          <th>Asal</th>
+        </tr>
+        <tr>
+          <td>Rafhi Sadipta</td>
+          <td>5025221014</td>
+          <td>Medan</td>
+        </tr>
+        <tr>
+          <td>Yanuar Eka</td>
+          <td>5025221000</td>
+          <td>Nganjuk</td>
+        </tr>
+        <tr>
+            <td>Fadhl Akmal</td>
+            <td>5025221000</td>
+            <td>Rungkut</td>
+          </tr>
+      </table>
+</div>
+<div> 
+    <b>Perhatian!</b>
+    <strong>Data diatas bersifat rahasia!</strong>
+    <i>This text is italic</i>
+    <em>This text is emphasized</em>
+    <small>This is some smaller text.</small>
+</div>
+<div>
+    <p>Here is a quote from esaunggul website:</p>
+    <blockquote cite="https://lms--paralel-esaunggul-ac-id.webpkgcache.com/doc/-/s/lms-paralel.esaunggul.ac.id/pluginfile.php?file=/99627/mod_resource/content/1/12_7212_PSD532_122018.pdf">
+        Secara terminologi, website adalah kumpulan dari halaman- halaman situs, yang
+        terangkum dalam sebuah domain atau subdomain, yang tempatnya berada di
+        dalam <abbr title="World Wide Web">WWW</abbr> di dalam Internet. Web merupakan kumpulankumpulan dokumen yang banyak tersebar di beberapa komputer server yang berada di
+        seluruh penjuru dunia dan terhubung menjadi satu jaringan melalui jaringan yang
+        disebut internet.
+            Fungsi web ialah sebagai <mark>alat komunikasi</mark>, karena sudah jelas bahwa Internet
+        berfungsi sebagai alat komunikasi, yang mana dilakukan secara jarak jauh dan
+        Berfungsi sebagai sarana informasi dan wawasan ilmu pengetahuan, sepertihalnya kita
+        dapat mengetahui informasi yang selalu berkembang, dan agar kita tidak tertinggal
+        dengan dengan tekhnologi yang semakin maju ini.
+            Adapun terdapat dua langkah yang harus dilakukan untuk menentukan metode
+        pembelajaran berbasis Web yaitu adalah menentukan terlebih dahulu tipe <ins>pembelajaran
+        yang akan disampaikan</ins>. Analisis kebutuhan dilakukan pada <del>langkan</del> ini, untuk
+        menentukan ranah maa yang akan disentuh oleh proses pembelajaran ini, apakan
+        kognitif, psikomotor, atau efektif.
+            Di dalam pembelajaran ini sangat membantu kita dalam melakukan
+        pembelajaran yang <sub>efektif</sub>, karena kita dapat mendapatkan ilmu pengetahan yang
+        sangat luas disini, dengan menggunakan <sup>internet</sup> kita dapat mencari hal-hala yang
+        belum terfahami dan menambah lmu untuk kita semua. Terpenting ialah dalam
+        menggunakan web ini secara positif bukan untuk menggunakan hal-hal yang negatife.
+    </blockquote>
+    <p>Secara singkat WEB adalah: <q>Kumpulan kumpulan dokumen yang banyak tersebar di beberapa komputer server yang berada di
+        seluruh penjuru dunia dan terhubung menjadi satu jaringan melalui jaringan yang
+        disebut internet.</q></p>
+</div>
+<div>
+    <p>Berikut ini adalah vidio referensi pembelajaran web:</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/O8mJougksRk?si=RW29Jvrjmn9d3zAJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 </body>
 </html>
